--- a/index.html
+++ b/index.html
@@ -72,5 +72,14 @@ src="https://www.facebook.com/tr?id=585734677641307&ev=PageView&noscript=1"
 <p class="emoji">🐶🐱🐦 דואגים לחיות המחמד שלכם בכל שעה 🐟🦴</p>
     <p>קנייה חכמה ומהנה קהילה יקרה 💖</p>
     <a href="https://chat.whatsapp.com/JNdEPUHHQIo89Lrk64CbOe" target="_blank" class="btn">הצטרפו לקבוצת הווצאפ שלנו!</a>
+    <a href="https://chat.whatsapp.com/XXXXXXXXXXXXX" class="btn" onclick="redirectAfterClick()">הצטרפו לקבוצת הוואטסאפ</a>
+    
+<script>
+    function redirectAfterClick() {
+        setTimeout(function() {
+            window.location.href = "thank-you.html"; 
+        }, 3000); // המתנה של 3 שניות לפני המעבר לדף התודה
+    }
+</script>
 </body>
 </html>
