--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ src="https://www.facebook.com/tr?id=585734677641307&ev=PageView&noscript=1"
 <script>
     function redirectAfterClick() {
         setTimeout(function() {
-            window.location.href = "thank-you.html"; 
-        }, 3000); // המתנה של 3 שניות לפני המעבר לדף התודה
+            window.location.href = "thank you page.html"; 
+        }, 3000);
     }
 </script>
 </body>
