--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@ src="https://www.facebook.com/tr?id=585734677641307&ev=PageView&noscript=1"
         <p>הצטרף עכשיו ותחסוך מאות שקלים בחודש! 💰🐾</p>
 <p class="emoji">🐶🐱🐦 דואגים לחיות המחמד שלכם בכל שעה 🐟🦴</p>
     <p>קנייה חכמה ומהנה קהילה יקרה 💖</p>
-    <a href="https://chat.whatsapp.com/JNdEPUHHQIo89Lrk64CbOe" target="_blank" class="btn">הצטרפו לקבוצת הווצאפ שלנו!</a>
-    <a href="https://chat.whatsapp.com/XXXXXXXXXXXXX" class="btn" onclick="redirectAfterClick()">הצטרפו לקבוצת הוואטסאפ</a>
+    <a href="https://chat.whatsapp.com/JNdEPUHHQIo89Lrk64CbOe" class="btn" onclick="redirectAfterClick()">הצטרפו לקבוצת הוואטסאפ</a>
     
 <script>
     function redirectAfterClick() {
