--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ src="https://www.facebook.com/tr?id=585734677641307&ev=PageView&noscript=1"
 <script>
     function redirectAfterClick() {
         setTimeout(function() {
-            window.location.href = "thank you page.html"; 
+            window.location.href = "https://THeNoAm32.github.io/CommuniPet/thank-you.html; 
         }, 3000);
     }
 </script>
