--- a/index.html
+++ b/index.html
@@ -69,12 +69,14 @@ src="https://www.facebook.com/tr?id=585734677641307&ev=PageView&noscript=1"
         <p>אז החלטתי לשנות את זה! בקהילת הווצאפ שלנו תקבל גישה ישירה למוצרים הכי טובים, במחירים בלי פערי תיווך. הכל אחרי בדיקות שלי - האיכות, האמינות, והמחיר הכי טוב.</p>
         <p>אם אתה אוהב את חיית המחמד שלך אבל לא מוכן לשלם סתם מחירים מופרזים – זה המקום בשבילך.</p>
         <p>👇🏼הצטרף עכשיו ותחסוך מאות שקלים בחודש! 💰🐾👇🏼</p>
-    <a href="#" https://chat.whatsapp.com/JNdEPUHHQIo89Lrk64CbOe" class="btn" onclick="redirectAfterClick(event)">הצטרפו לקבוצת הוואטסאפ</a>
+    <a href="https://chat.whatsapp.com/JNdEPUHHQIo89Lrk64CbOe" class="btn" onclick="redirectAfterClick(event)">הצטרפו לקבוצת הוואטסאפ</a>
     
 <p class="emoji">🐶🐱🐦CommuniPet- דואגים לחיות המחמד שלכם בכל שעה 🐟🦴</p>
     <p>קנייה חכמה ומהנה קהילה יקרה 💖</p>
     
 
+
+<a href="#" class="btn" onclick="redirectAfterClick(event)">הצטרפו לקבוצת הוואטסאפ</a>
 
 <script>
     function redirectAfterClick(event) {
