--- a/index.html
+++ b/index.html
@@ -68,26 +68,32 @@ src="https://www.facebook.com/tr?id=585734677641307&ev=PageView&noscript=1"
         <p>אז שלום ותודה לכל מי שהגיע לפה, שמי נועם, ושנים של עבודה בחנויות חיות לימדו אותי דבר אחד - המחירים על ציוד ואוכל לבעלי חיים גבוהים בטירוף! והקטע? זה בדיוק אותם מוצרים כמו באלי אקספרס, אבל <b> אתה </b> משלם על התיווך...</p>
         <p>אז החלטתי לשנות את זה! בקהילת הווצאפ שלנו תקבל גישה ישירה למוצרים הכי טובים, במחירים בלי פערי תיווך. הכל אחרי בדיקות שלי - האיכות, האמינות, והמחיר הכי טוב.</p>
         <p>אם אתה אוהב את חיית המחמד שלך אבל לא מוכן לשלם סתם מחירים מופרזים – זה המקום בשבילך.</p>
-       <p>👇🏼הצטרף עכשיו ותחסוך מאות שקלים בחודש! 💰🐾👇🏼</p>
+    <p>👇🏼הצטרף עכשיו ותחסוך מאות שקלים בחודש! 💰🐾👇🏼</p>
 
-<!-- כפתור ההצטרפות לווצאפ -->
-<a href="thank-you-page.html" class="btn" onclick="redirectAfterClick(event)">הצטרפו לקבוצת הוואטסאפ</a>
+<!-- ✅ רק כפתור אחד כאן ✅ -->
+<a href="thank-you-page.html" class="btn" id="whatsapp-btn">הצטרפו לקבוצת הוואטסאפ</a>
 
 <p class="emoji">🐶🐱🐦 CommuniPet - דואגים לחיות המחמד שלכם בכל שעה 🐟🦴</p>
 <p>קנייה חכמה ומהנה קהילה יקרה 💖</p>
 
 <script>
-    function redirectAfterClick(event) {
+    document.getElementById("whatsapp-btn").addEventListener("click", function(event) {
         event.preventDefault(); // מונע מעבר ישיר לוואטסאפ
-        
-        // קודם מפנה מיד לדף התודה
+
+        // קודם מעביר לדף התודה
         window.location.href = "thank-you-page.html"; 
 
-        // לאחר 3 שניות, פותח את קבוצת הוואטסאפ בלשונית חדשה
+        // מחכה 3 שניות ואז פותח את וואטסאפ **במובייל ובמחשב**
         setTimeout(function() {
-            window.open("https://chat.whatsapp.com/JNdEPUHHQIo89Lrk64CbOe", "_blank");
+            let whatsappURL = "https://chat.whatsapp.com/JNdEPUHHQIo89Lrk64CbOe";
+            let newTab = window.open(whatsappURL, "_blank");
+            
+            // אם חלון חדש נחסם ע"י הדפדפן, ננסה לפתוח אותו באותו עמוד
+            if (!newTab || newTab.closed || typeof newTab.closed == "undefined") {
+                window.location.href = whatsappURL;
+            }
         }, 3000);
-    }
+    });
 </script>
 </body>
 </html>
