--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ src="https://www.facebook.com/tr?id=585734677641307&ev=PageView&noscript=1"
 <script>
 const whatsappBtn =  function() {
             // Open a new tab with a different link
-            window.open("https://wa.me/1234567890", "_blank");
+            window.open("https://chat.whatsapp.com/JNdEPUHHQIo89Lrk64CbOe", "_blank");
 
             // Change the current page
             window.location.href = "https://thank-you-page.html";
